argocd/apps/media-server/ombi/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
  labels:
    app: ombi
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ombi
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ombi
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/Chicago
          image: linuxserver/ombi:latest@sha256:074af33be42157afa33de4f93a4663d82a8c5fdc6a40cee78eb97500cca17640
          imagePullPolicy: Always
          name: ombi
          resources:
            limits:
              cpu: 100m
              memory: 750Mi
            requests:
              cpu: 20m
              memory: 400Mi
          ports:
            - containerPort: 3579
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
          startupProbe:
            httpGet:
              path: /
              port: 3579
            initialDelaySeconds: 300
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 3579
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
