argocd/apps/media-server/ombi/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ombi-vs
spec:
  hosts:
  - ombi.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: ombi
        port:
          number: 3579
